--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -98,4 +98,15 @@
         android:layout_margin="16dp"
 
         app:srcCompat="@drawable/ic_baseline_add_24" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="View All"
+        android:textSize="17sp"
+        android:id="@+id/view_all_tv"
+        android:layout_marginTop="15dp"
+        android:layout_alignParentRight="true"
+        android:drawableEnd="@drawable/ic_baseline_arrow_forward_ios_24"
+        android:layout_alignParentTop="true"/>
 </RelativeLayout>
