Done Basic With some minor bug -Keyboard might not close after some action. -Didn't trigger API call to make changes on data

--- a/app/src/main/res/layout/activity_view_all.xml
+++ b/app/src/main/res/layout/activity_view_all.xml
@@ -11,7 +11,35 @@
         layout="@layout/search_bar"
         android:layout_width="match_parent"
         android:layout_height="45dp" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/search_layout"
+        android:visibility="gone"
+        android:id="@+id/no_result_found_rl">
+<TextView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="No Result Found"
+    android:textSize="18sp"
+    android:textStyle="bold"
+    android:layout_marginTop="10dp"
+    android:textAlignment="center"
+    android:id="@+id/noresult_tv"
 
+    />
+    <com.airbnb.lottie.LottieAnimationView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:lottie_fileName="no_result_found.json"
+        app:lottie_autoPlay="true"
+        android:layout_marginTop="-20dp"
+        android:layout_below="@id/noresult_tv"
+        android:layout_centerHorizontal="true"
+        app:lottie_loop="true"
+        android:id="@+id/no_result_lottie"
+       />
+    </RelativeLayout>
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/todo_viewall_recyclerView"
         android:layout_width="match_parent"
